# HPC_Assignment

./: .gitignore  CMakeLists.txt  Dockerfile  readme.md
Problem1/: CMakeLists.txt  knn.cpp  readme.md  run.sh
Problem2/: CMakeLists.txt  README.md  conv.cu  convert_pgm_to_png.py
Report/: assignment1_report.tex  problem1.aux  problem1.tex  problem2.aux  problem2.tex  refs.bib  template.aux  template.bbl  template.bcf  template.blg  template.fdb_latexmk  template.fls  template.out  template.run.xml  template.tex
